--- a/trackinglist/src/App.scss
+++ b/trackinglist/src/App.scss
@@ -7,7 +7,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&display=swap');
 
-@import './pages/Main/Main.scss';
+@import './pages/Main/main.scss';
 
 body {
   margin: 0px;
